# crypto

./: CMakeCache.txt  CMakeLists.txt  README.md  ascii2hex.cpp  bin2hex.cpp  c.txt  ciphertext2.txt  cryptoisfun.sh  decrypt.sh  gcd.cpp  hex2ascii.cpp  hex2bin.cpp  key.txt  letterf.txt  libc.txt  mod.cpp  otp_gen.cpp  passgen.sh  phi.cpp  shift_cipher.cpp  solution_ciphertext.txt  vigenere.cpp  vigenere_break.cpp  vigenere_hex.cpp  vigenere_key_length.cpp  xor.cpp
week3/: README.txt  decrypt.py  output.txt
week4/: README.txt  forge.py
week7/: README.txt  signforge.py
